--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,155 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif
+}
+
+.responsive-bar {
+  display: none;
+}
+
+.navbar-wpb  {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 10px 50px;
+  box-sizing: border-box;
+  transition: .5s;
+  z-index: 1;
+}
+
+.navbar-wpb.dark {
+  background: rgba(0,0,0,0.8);
+  height: 80px;
+  padding: 10px 50px;
+}
+
+.navbar-wpb .logo {
+  float: left;
+}
+
+.navbar-wpb .logo img {
+  height: 80px;
+  transition: .5s
+}
+
+.navbar-wpb.dark .logo img {
+  height: 60px;
+} 
+
+.navbar-wpb > ul {
+  width: 90%;
+  margin: 0 auto;
+  padding: 0;
+  /* float: right */
+}
+
+.navbar-wpb > ul > li {
+  list-style: none;
+  display: inline-block;
+}
+
+.navbar-wpb > ul > li > a:hover {
+  /* background: #f00; */
+  color: #fff
+}
+
+.navbar-wpb > ul > li > a {
+  color: #fff;
+  text-shadow:0px 3px 3px rgb(0 0 0 / 30%);
+  /* color: #262626; */
+  text-decoration: none;
+  text-transform: uppercase; /*for capitalisation of letters */
+  line-height: 80px;
+  padding: 5px 20px;
+  transition: .5s;
+}
+
+.navbar-wpb.dark > ul > li > a {
+  color: #fff;
+  line-height:60px;
+}
+
+@media(max-width:768px){
+  .responsive-bar{
+      display: block;
+      width: 100%;
+      height: 60px;
+      background: #262626;
+      position: fixed;
+      top: 0;
+      left: 0;
+      padding: 5px 20px;
+      box-sizing: border-box;
+      z-index: 3;
+  }
+  .responsive-bar .logo img{
+      float: left;
+      height: 50px;  
+  }
+  .responsive-bar .menu h4{
+      float: right;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      line-height: 50px;
+      cursor: pointer;
+      text-transform: uppercase;
+  }
+  .navbar-wpb{
+      padding: 0;
+      z-index: 2;
+  }
+  .navbar-wpb,
+  .navbar-wpb.dark{
+  background: #262626;
+  height: 60px;
+  padding: 0;
+  }
+  .navbar-wpb .logo{
+      display: none;
+  }
+  .navbar-wpb ul{
+      position: absolute;
+      width: 100%;
+      top: 60px;
+      left: 0;
+      background: #262626;
+      float: none;
+      display: none;
+      z-index: 0;
+  }
+  .navbar-wpb ul.active{
+      display: block;
+  }
+  .navbar-wpb ul li{
+      width: 100%;
+  }
+  .navbar-wpb ul li a{
+      display: block;
+      padding: 0;
+      width: 100%;
+      text-align: center;
+      line-height: 30px !important;
+      color: #fff;
+      
+  }
+
+  .navbar-wpb > ul{
+      width: 100%;
+      display: none;
+  }
+  .navbar-wpb > ul > li{
+      display: block;
+      text-align: center;
+  }
+  .active{
+      display: block;
+  }
+}
+
 .conatiner1 {
   position: relative;
   text-align: center;
